# EgoBlur

./: .gitignore  README_UV.md  install.sh  pyproject.toml  test_installation.py
script/: blur_videos_directory.py  blur_videos_directory_with_dilation.py  demo_ego_blur.py  ego_blur_dataonly.py  ego_blur_dataonly_directory.py
